ページング追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 <!-- Main Content -->
 <div class="container">
   <?php foreach ($dir as $k=>$v){ ?>
-  <?php echo ($v);?>
+  <?php //echo ($v);?>
   <?php }//foreach ?>
 </div>
 
